kubernetes/overlays/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: securebank-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  rules:
    - host: securebank.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: securebank-api
                port:
                  number: 80
